--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,15 @@ img {
   padding-bottom: 60px;
 }
 
+.wrap {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-left {
+  margin-right: 70px;
+}
+
 .footer .logo {
   display: block;
   margin-bottom: 20px;
@@ -461,14 +470,27 @@ img {
   cursor: pointer;
 }
 
-.wrap > .title {
+.footer-right > .title {
   color: var(--heading-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.footer-right .social-link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-right .social-link:hover,
+.footer-right .social-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-right .social-icon {
+  fill: #ffffff;
 }
 
 /* -----ВТОРАЯ СТРАНИЦА----- */
@@ -516,6 +538,8 @@ img {
 .btn-filter:focus {
   background-color: var(--accent-color);
   color: var(--background-filter);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
 
@@ -534,6 +558,11 @@ img {
   margin-left: var(--card-set-gap);
   display: flex;
   flex-direction: column;
+}
+
+.card-set .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card-content {
